fix(cors): allow all origins via CORS_ALLOWED_ORIGINS env var, remove yml cors conflict